[rukmal] finished conclusion

--- a/sections/benchmark_comparison.tex
+++ b/sections/benchmark_comparison.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\chapter{Benchmark Comparison}
+\chapter{Benchmark Comparison} \label{benchmark_comparison}
 
 We now have a data-driven methodology for deriving learned sector universes (addressing RG-1), and have developed a objetive criteria-driven ranking methodology to compare the learned sector universes against each other, addressing RG-2. The final step is to evaluate our objectively-identified risk-adjusted return optimal learned sector universe (see Section~\ref{optimal_sector_universe:risk_adj_return_optimal}) against the benchmark classification. Thus, this section addresses the third and final research goal, RG-3 (see Section~\ref{research_goals:specific_research_goals}).
 
