--- a/sections/optimal_sector_universes.tex
+++ b/sections/optimal_sector_universes.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     
-\chapter{Optimal Sector Universes}
+\chapter{Optimal Sector Universes} \label{optimal_sector_universes}
 
 
 In this chapter, we utilize the backtesting system outlined in the previous chapter, we performed historical universe-level analysis of each of our candidate learned sectors. To reiterate, we plan to use the SETF restructuring turnover, the portfolio rebalancing turnover, the portfolio value, and the Sharpe ratio to rank our candidate learned sectors againt each other.
