--- a/sections/research_goals.tex
+++ b/sections/research_goals.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     
-\chapter{Research Goals}
+\chapter{Research Goals} \label{research_goals}
     
 In this section, we outline our overarching thesis statement. Additionally, we also isolate specific research goals based on this thesis statement, which we will address in sequence throughout the report. Through tackling each of the stated research goals, we hope to address the full scope of our thesis statement.
 
