[rukmal] renamed files so they're better organized, and added full license information

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \begin{document}
 
 % Title page
-\afterpage{\blankpage} % Blank page without messing up page numbers
+\afterpage{\innerCover} % Blank page without messing up page numbers
 \subfile{resources/title_page.tex}
 
 % Setting page numbering to roman
@@ -48,37 +48,37 @@
 % \subfile{sections/subfile_section}
 
 % Introduction
-\subfile{sections/introduction}
+\subfile{sections/01_introduction}
 
 % Research Goals
-\subfile{sections/research_goals}
+\subfile{sections/02_research_goals}
 
 % Literature Review
-\subfile{sections/literature_review}
+\subfile{sections/03_literature_review}
 
 % Feature Selection
-\subfile{sections/feature_selection}
+\subfile{sections/04_feature_selection}
 
 % Unsupervised Learning Methods Survey
-\subfile{sections/unsupervised_learning_methods_survey}
+\subfile{sections/05_unsupervised_learning_methods_survey}
 
 % Hierarchical Clustering Model
-\subfile{sections/hierarchical_clustering_model}
+\subfile{sections/06_hierarchical_clustering_model}
 
 % Candidate Universe Ranking
-\subfile{sections/candidate_universe_ranking}
+\subfile{sections/07_candidate_universe_ranking}
 
 % Optimal Sector Universes
-\subfile{sections/optimal_sector_universes}
+\subfile{sections/08_optimal_sector_universes}
 
 % Benchmark Comparison
-\subfile{sections/benchmark_comparison}
+\subfile{sections/09_benchmark_comparison}
 
 % Conclusion
-\subfile{sections/conclusion}
+\subfile{sections/10_conclusion}
 
 % Future work
-\subfile{sections/future_work}
+\subfile{sections/11_future_work}
 
 % Appendices
 \newpage
