[rukmal] finished future work; looking good now

--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,7 @@
 
 % References
 \newpage
+\nocite{Weerawarana2019FECode} % Report source code
 \addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography
 
