--- a/references.bib
+++ b/references.bib
@@ -95,6 +95,13 @@
     isbn = {0471458082}
 }
 
+@misc{Weerawarana2019FECode,
+    title = {{FE 800 Learned Sectors Report Source Code}},
+    year = {2019},
+    author = {Weerawarana, Rukmal and Zhu, Yiyi and He, Yuzhen},
+    url = {http://git.rukmal.me/FE-800-Learned-Sectors-Report}
+}
+
 @techreport{Hill2016FinancialMethodology,
     title = {{Financial Institution Rating Methodology}},
     year = {2016},
