--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -48,3 +48,9 @@
     name=Portfolio Rebalancing Turnover,
     description={The dollar-value change of constituent SETF turnover incurred when a portfolio of SETFs is rebalanced}
 }
+
+\newglossaryentry{hca}
+{
+    name=HCA,
+    description={Hierarchical clustering algorithm/analysis}
+}
