--- a/resources/header.tex
+++ b/resources/header.tex
@@ -6,7 +6,7 @@
 \usepackage[authordate, maxcitenames=1]{biblatex-chicago} % chicago bibliography style
 \usepackage{caption} % Captions
 \usepackage{csquotes} % For chicago bibliography style
-\usepackage[type={CC}, modifier={by}, version={3.0}]{doclicense} % Licenses
+\usepackage[type={CC}, modifier={by-sa}, version={3.0}]{doclicense} % CC License
 \usepackage{enumerate} % Special enumeration
 \usepackage{fancyhdr} % Fancy heders
 \usepackage{float} % Figure position
@@ -126,6 +126,7 @@
         % \fbox{
         \begin{minipage}{.75\linewidth}
 
+        % Creative Commons license for the content
         \doclicenseThis
         
         \vspace{2em}
